--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -474,7 +474,12 @@ License: You must have a valid license purchased only from themeforest(the above
 								<button class="m-aside-header-menu-mobile-close  m-aside-header-menu-mobile-close--skin-light " id="m_aside_header_menu_mobile_close_btn"><i class="la la-close"></i></button>
 								<div id="m_header_menu" class="m-header-menu m-aside-header-menu-mobile m-aside-header-menu-mobile--offcanvas  m-header-menu--skin-dark m-header-menu--submenu-skin-light m-aside-header-menu-mobile--skin-light m-aside-header-menu-mobile--submenu-skin-light ">
 									<ul class="m-menu__nav  m-menu__nav--submenu-arrow ">
-										<li class="m-menu__item  m-menu__item--active " aria-haspopup="true"><a href="index.html" class="m-menu__link "><span class="m-menu__item-here"></span><span class="m-menu__link-text">Dashboard</span></a></li>
+										<li class="m-menu__item  m-menu__item--active " aria-haspopup="true">
+											<a th:href="@{/}" class="m-menu__link ">
+												<span class="m-menu__item-here"></span>
+												<span class="m-menu__link-text">Dashboard</span>
+											</a>
+										</li>
 										<li class="m-menu__item  m-menu__item--submenu m-menu__item--rel" m-menu-submenu-toggle="click" aria-haspopup="true">
 											<a href="javascript:;" class="m-menu__link m-menu__toggle" title="Non functional dummy link">
 												<span class="m-menu__item-here"></span>
@@ -508,55 +513,23 @@ License: You must have a valid license purchased only from themeforest(the above
 														<div class="m-menu__submenu m-menu__submenu--classic m-menu__submenu--right"><span class="m-menu__arrow "></span>
 															<ul class="m-menu__subnav">
 																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
-																	<a href="inner.html" class="m-menu__link ">
+																	<a th:href="@{/topic}" class="m-menu__link ">
 																	<span class="m-menu__link-text">List of Topics</span>
 																	</a>
 																</li>
 																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
-																	<a href="inner.html" class="m-menu__link ">
+																	<a th:href="@{/topic/create}" class="m-menu__link ">
 																		<span class="m-menu__link-text">Create new topic</span>
 																	</a>
 																</li>
 															</ul>
 														</div>
 													</li>
-													<li class="m-menu__item  m-menu__item--submenu" m-menu-submenu-toggle="hover" m-menu-link-redirect="1" aria-haspopup="true">
-														<a href="javascript:;" class="m-menu__link m-menu__toggle" title="Non functional dummy link">
-															<i class="m-menu__link-icon flaticon-chat-1"></i>
+													<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
+														<a th:href="@{/group}" class="m-menu__link ">
+															<i class="m-menu__link-icon flaticon-users"></i>
 															<span class="m-menu__link-text">Consumers</span>
-															<i class="m-menu__hor-arrow la la-angle-right"></i>
-															<i class="m-menu__ver-arrow la la-angle-right"></i>
 														</a>
-														<div class="m-menu__submenu m-menu__submenu--classic m-menu__submenu--right">
-															<span class="m-menu__arrow "></span>
-															<ul class="m-menu__subnav">
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
-																	<a href="inner.html" class="m-menu__link ">
-																		<span class="m-menu__link-text">Customer Feedbacks</span>
-																	</a>
-																</li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
-																	<a href="inner.html" class="m-menu__link ">
-																		<span class="m-menu__link-text">Supplier Feedbacks</span>
-																	</a>
-																</li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
-																	<a href="inner.html" class="m-menu__link ">
-																		<span class="m-menu__link-text">Reviewed Feedbacks</span>
-																	</a>
-																</li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
-																	<a href="inner.html" class="m-menu__link ">
-																		<span class="m-menu__link-text">Resolved Feedbacks</span>
-																	</a>
-																</li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
-																	<a href="inner.html" class="m-menu__link ">
-																		<span class="m-menu__link-text">Feedback Reports</span>
-																	</a>
-																</li>
-															</ul>
-														</div>
 													</li>
 													<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
 														<a href="inner.html" class="m-menu__link ">
