--- a/src/main/resources/templates/ConsumerGroupDetail.html
+++ b/src/main/resources/templates/ConsumerGroupDetail.html
@@ -738,64 +738,79 @@ License: You must have a valid license purchased only from themeforest(the above
 					</div>
 
 					<!-- END: Subheader -->
-					<div class="m-content">Information of Group Consumer Members</div>
+					<div class="m-content">Information of Consumer</div>
 					<div class="m-portlet m-portlet--full-height ">
 						<div class="m-portlet__head">
 							<div class="m-portlet__head-caption">
 								<div class="m-portlet__head-title">
-									<h3 class="m-portlet__head-text">
-										All Consumers
-									</h3>
+									<h3 th:text="|Detail of ${groupId} group|" class="m-portlet__head-text"></h3>
 								</div>
 							</div>
 						</div>
 						<div class="m-portlet__body">
 							<div class="m-widget6">
 								<div class="m-widget6__head">
-									<div style="display: grid; gap: 16px; grid-template-columns: repeat(7, 1fr);" class="m-widget6__item">
-										<span style="width: 100%;" class="m-widget6__caption">
-											Consumer Group ID
+									<div style="display: flex; gap: 16px; padding: 10px 10px;" class="m-widget6__item">
+										<span style="max-width: 200px;" class="m-widget6__caption">
+											Group ID
 										</span>
-										<span style="width: 100%;" class="m-widget6__caption">
-											Members Number
-										</span>
-										<span style="width: 100%;" class="m-widget6__caption">
-											Topic Number
-										</span>
-										<span style="width: 100%;" class="m-widget6__caption">
-											Latest Offset
-										</span>
-										<span style="width: 100%;" class="m-widget6__caption">
-											Messages Behind
-										</span>
-										<span style="width: 100%;" class="m-widget6__caption">
+										<span style="max-width: 200px;" class="m-widget6__caption">
 											Coordinator Broker
 										</span>
-										<span style="width: 100%;" class="m-widget6__caption">
+										<span style="max-width: 200px;" class="m-widget6__caption">
 											State
 										</span>
 									</div>
-								</div>
-								<div class="m-widget6__head">
-									<div th:each="group : ${groups}" style="font-weight: 300; padding-top: 10px; display: grid; gap: 16px; grid-template-columns: repeat(7, 1fr); align-items: center;" class="m-widget6__item">
-										<a th:href="@{/group/{groupId}(groupId=${group.consumerGroupId})}" style="text-decoration: none;">
-											<span th:text="${group.consumerGroupId}" style="overflow-wrap: anywhere; max-width: 145px; width: 100%;" class="m-widget6__caption"></span>
-										</a>
-										<a th:href="@{/group/member/{groupId}(groupId=${group.consumerGroupId})}" style="text-decoration: none;">
-											<span th:text="${group.memberNum}" style="padding: auto; width: 100%;" class="m-widget6__caption"></span>
-										</a>
-										<span th:text="${group.topicNum}" style="width: 100%;" class="m-widget6__caption"></span>
-										<span th:text="${group.latestOffset}" style="width: 100%;" class="m-widget6__caption"></span>
-										<span th:text="${group.messageBehind}" style="width: 100%;" class="m-widget6__caption"></span>
-										<span th:text="${group.coordinator}" style="width: 100%;" class="m-widget6__caption"></span>
-										<span th:text="${group.state}" style="width: 100%;" class="m-widget6__caption"></span>
+									<div style="padding: 10px 10px; display: flex; gap: 16px; font-weight: 300; padding-top: 10px; align-items: center;" class="m-widget6__item" m-menu-submenu-toggle="click" aria-haspopup="true">
+										<span th:text="${group.groupId}" style="max-width: 200px;" class="m-widget6__caption">
+										</span>
+										<div style="max-width: 200px; display: block;" class="m-widget6__caption">
+											<div th:text="|ID: ${group.coordinator.id}|" style="padding-bottom: 5px;"></div>
+											<div th:text="|Host: ${group.coordinator.host}:${group.coordinator.port}|" style="padding-bottom: 5px;"></div>
+											<div th:text="|Rack: ${group.coordinator.rack}|" style="padding-bottom: 5px;"></div>
+											<div th:text="|IsFenced: ${group.coordinator.isFenced}|" style="padding-bottom: 5px;"></div>
+											<div th:text="|IsEmpty: ${group.coordinator.isEmpty}|" style="padding-bottom: 5px;"></div>
+										</div>
+										<span th:text="${group.groupState}" style="max-width: 200px;" class="m-widget6__caption">
+										</span>
 									</div>
+								</div>
+								<span style="max-width: 200px; font-weight: 600; font-size: larger;" class="m-widget6__caption">
+									Group's Partition
+								</span>
+								<div class="m-widget6__head">
+									<div th:each="groupLag : ${groupLags}" style="border: dashed rgb(177, 177, 177) 1px; padding: 10px 10px; max-width: 1000px; margin-bottom: 5px;">
+										<div style="display: flex; gap: 16px; font-weight: 400; padding-top: 10px; align-items: center;" class="m-widget6__item">
+											<span style="max-width: 200px;" class="m-widget6__caption">
+												Topic
+											</span>
+											<span style="max-width: 200px;" class="m-widget6__caption">
+												Partition
+											</span>
+											<span style="max-width: 200px;" class="m-widget6__caption">
+												Commited Offset
+											</span>
+											<span style="max-width: 200px;" class="m-widget6__caption">
+												Latest Offset
+											</span>
+											<span style="max-width: 200px;" class="m-widget6__caption">
+												Lag
+											</span>
+										</div>
+										<div style="display: flex; gap: 16px; font-weight: 300; padding-top: 10px; align-items: center;" class="m-widget6__item">
+											<span th:text="${groupLag.topic}" style="max-width: 200px;" class="m-widget6__caption"></span>
+											<span th:text="${groupLag.partition}" style="max-width: 200px;" class="m-widget6__caption"></span>
+											<span th:text="${groupLag.commitedOffset}" style="max-width: 200px;" class="m-widget6__caption"></span>
+											<span th:text="${groupLag.latestOffset}" style="max-width: 200px;" class="m-widget6__caption"></span>
+											<span th:text="${groupLag.lag}" style="max-width: 200px;" class="m-widget6__caption"></span>
+										</div>
+									</div>
+<!--									 <div style="border-bottom: 1px dashed #8d8989; margin: 16px 0;"></div>-->
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-
 				<!--</div>-->
 			</div>
 
